--- a/templates/Procfile
+++ b/templates/Procfile
@@ -1,2 +1,2 @@
-web: bundle exec puma -C ./config/puma.rb
+web: bundle exec puma -p ${PORT:-3000} -C ./config/puma.rb
 worker: bundle exec rake jobs:work
