--- a/templates/sample.env
+++ b/templates/sample.env
@@ -1,5 +1,2 @@
-# http://ddollar.github.com/foreman/
-ASSET_HOST=localhost:3000
-HOST=localhost:3000
-RACK_ENV=development
-SECRET_KEY_BASE=development_secret
+export RACK_ENV="development"
+export SECRET_KEY_BASE="development_secret"
